# LubMi-shop

./: .gitignore  .htaccess  ReadMe.md  passenger_wsgi.py
lmshop/: .clangd  CMakeLists.txt  Dockerfile  ap_application.cpp  ap_application.h  ap_session.cpp  ap_session.h  ap_user.cpp  ap_user.h  business.cpp  business.h  config.h  dbase.cpp  dbase.h  dbodefs.h  embed.html  embeddableapp.cpp  embeddableapp.h  imageprocessor.cpp  imageprocessor.h  lmshop.pro  lmshopapp.cpp  lmshopapp.h  main.cpp  persistdata.cpp  persistdata.h  persistinfo.cpp  persistinfo.h  sh_app.cpp  sh_app.h  sh_application.cpp  sh_application.h  sh_business.cpp  sh_business.h  sh_persistdata.cpp  strings-ru.xml  strings.xml  style.astylerc  tools.cpp  tools.h  (+2 more)
lmspy/: .dockerignore  Dockerfile  docker-compose.yml  install-beget.md  install-msql.md  install.md  install.sh  install.txt  passenger_wsgi.py  requirements-docker.txt  requirements.txt
lmspy/config/nginx/: default.conf.template
lmspy/config/uwsgi/: uwsgi.ini
lmspy/lmsenv/: pyvenv.cfg
lmspy/lmshop/: Dockerfile  lmshop.sqlite3  manage.py
lmspy/lmshop/customerinfo/: apps.py  customerinfo.py
lmspy/lmshop/favorites/: customerinfo.py  favorites.py
lmspy/lmshop/lms/: admin.py  d6y.py  d6y_factory.py  deco.py  defines.py  forms.py  models.py  perfumery.py  signals.py  urls.py  utils.py  views.py
lmspy/lmshop/lms/api/: business.py  decorators.py  middleware.py  serializers.py  urls.py  views.py
lmspy/lmshop/lms/coworkers/: cdek.py  (+10 more)
lmspy/lmshop/lmshop/: asgi.py  settings.py  urls.py  wsgi.py
lmspy/lmshop/scart/: apps.py  scart.py
(+170 files in other folders)
